Fixing alignment on mportcard

--- a/style.css
+++ b/style.css
@@ -651,7 +651,8 @@ footer h3 {
   margin-top: 5%;
   height: 100%;
   width: 100%;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -681,9 +682,10 @@ footer h3 {
 .rowcards {
   margin: 0 auto;
   margin-top: 1%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   width: 82%;
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
 }
@@ -1008,7 +1010,7 @@ All the dark mode stuff
   }
 
   #branding a {
-    font-size: 0px;
+    font-size: 14px;
   }
 
   #navitems a:link {
@@ -1128,6 +1130,7 @@ All the dark mode stuff
   }
 
   .mportcard {
+    margin: 0 auto;
     margin-top: 2%;
     margin-bottom: 2%;
   }
